--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "coverage": "jest --coverage --silent --ci --watchAll --collectCoverageFrom='test/src/**/*.{types,stories,constants,test,sec}.{ts,tsx}'"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "jest": "^29.5.0",
