--- a/package.json
+++ b/package.json
@@ -6,17 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --ignore-path .gitignore",
+    "lint": "next lint",
     "test": "jest",
     "test:ci": "jest --coverage --silent --ci",
-    "coverage": "jest --coverage --silent --ci --watchAll --collectCoverageFrom='test/src/**/*.{types,stories,constants,test,sec}.{ts,tsx}'"
+    "coverage": "jest --coverage --silent --ci --watchAll --collectCoverageFrom='test/src/**/*.{types,stories,constants,test,sec}.{ts,tsx}'",
+    "generate:configs": "npm tsx tools/generate-configs.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
     "jest": "^29.5.0",
     "next": "13.4.2",
     "react": "18.2.0",
@@ -33,8 +32,15 @@
     "@types/node": "^20.1.3",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "eslint": "^8.40.0",
+    "eslint-config-next": "^13.4.2",
     "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-testing-library": "^5.11.0",
     "jest-environment-jsdom": "^29.5.0",
+    "lint-staged": "^13.2.2",
     "msw": "^1.2.1",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0"
